# scanner

./: .gitignore  .plots_new_setup.swp  .plots_new_setup2_RnD.C.swo  .plots_new_setup2_RnD.C.swp  .tile_plot_new_setup2.h.swp  .viewer.cfg  3dscan_rt_convert_in_folder.sh  ArCLight_scan_temp_results.txt  ArCLight_scan_temp_results_dichroic_mirror_on_edge.txt  FACL2_4p12_2_2_stabConv.root  FACL2_4p16_2_1_stabConv.root  FACL_4p00_2_2_stabConv.root  FACL_4p01_2_1_stabConv.root  FACL_4p01_2_4_stabConv.root  FACL_4p02_2_1_stabConv.root  FACL_4p02_2_3_stabConv.root  FACL_4p04_2_1_stabConv.root  FACL_4p04_2_3_stabConv.root  FACL_4p04_h_1_stabConv.root  FACL_4p05_2_1_stabConv.root  FACL_4p05_2_2_stabConv.root  FACL_4p05_2_4_stabConv.root  FACL_4p06_2_1_stabConv.root  FACL_4p06_2_2_stabConv.root  FACL_4p06_2_3_stabConv.root  FACL_4p08_2_2_stabConv.root  FACL_4p11_2_2_stabConv.root  FACL_4p11_2_6_stabConv.root  FACL_4p12_2_1_stabConv.root  FACL_4p12_2_2_stabConv.root  FACL_4p13_2_1_stabConv.root  FACL_4p13_2_2_stabConv.root  FACL_4p14_2_1_stabConv.root  FACL_4p15_2_10_stabConv.root  FACL_4p15_2_11_stabConv.root  FACL_4p15_2_1_stabConv.root  FACL_4p15_2_2_stabConv.root  FACL_4p15_2_4_stabConv.root  FACL_4p15_2_5_stabConv.root  FACL_4p15_2_6_stabConv.root  (+66 more)
1test_scanctrl/: setup_client.py
1test_scanctrl/scanctrl_client/: pyproject.toml
1test_scanctrl/scanctrl_client/src/scanctrl_client/: cli.py  config.py
1test_scanctrl/scanctrl_server/: pyproject.toml  scanctrl_server.service
1test_scanctrl/scanctrl_server/src/scanctrl_server/: api.py  config.py  server.py  tasks.py
T_sensor/: readout_T.py
archive/: FACL2_4p12_2_3_stabConv.root  FACL2_4p_12_2_1_stabConv.root  FACL_4p00_2_1_stabConv.root  FACL_4p01_2_2_stabConv.root  FACL_4p01_2_3_stabConv.root  FACL_4p01_2_5_stabConv.root  FACL_4p01_2_6_stabConv.root  FACL_4p02_2_2_stabConv.root  FACL_4p02_2_4_stabConv.root  FACL_4p04_2_2_stabConv.root  FACL_4p04_2_4_stabConv.root  FACL_4p04_2_5_stabConv.root  FACL_4p04_2_6_stabConv.root  FACL_4p04_h_2_stabConv.root  FACL_4p04_h_3_stabConv.root  FACL_4p05_2_3_stabConv.root  FACL_4p06_2_4_stabConv.root  FACL_4p07_2_1_stabConv.root  FACL_4p07_2_2_stabConv.root  FACL_4p08_2_1_stabConv.root  FACL_4p09_2_1_stabConv.root  FACL_4p09_2_3_stabConv.root  FACL_4p11_2_1_stabConv.root  FACL_4p11_2_3_stabConv.root  FACL_4p11_2_5_stabConv.root  FACL_4p12_2_3_stabConv.root  FACL_4p14_2_2_stabConv.root  FACL_4p15_2_12_stabConv.root  FACL_4p15_2_7_stabConv.root  FACL_4p15_2_9_stabConv.root  FACL_4p16_2_2_stabConv.root  FACL_4p17_2_1_stabConv.root  FACL_4p17_2_2_stabConv.root  FACL_4p18_2_2_stabConv.root  FACL_4p18_2_3_stabConv.root  FACL_4p19_2_5_stabConv.root  FACL_4p19_2_6_stabConv.root  (+65 more)
myproject/: Makefile  README.md  config.yaml  install.sh  myproject_server.service  pyproject.toml  setup_completion.py
myproject/src/myproject/: admin_cli.py  cli.py  client.py  config.py  server.py  task_manager.py
scanctrl/: README.md  default_config.json  pyproject.toml
scanctrl/config/template/scanctrl/: scanctrl_template_config.json
scanctrl/config/template/supplr/: supplr_template_config.csv
scanctrl/scanctrl/: cli.py  client.py  daqctrl.py  logger.py  ppulsectrl.py  printerctrl.py  sshctrl.py  supplrctrl.py
scanctrl/src/scanctrl/: cli.py  client.py  daqctrl.py  logger.py  ntcreader.py  ppulsectrl.py  printerctrl.py  sshctrl.py  supplrctrl.py
(+51 files in other folders)
