[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myproject"
version = "0.1.0"
description = "Client/server application using Click and Waitress"
requires-python = ">=3.11"

dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "flask>=2.3",
    "waitress>=2.1",
    "pyyaml>=6.0",
    "systemd-python>=234"  # for journald logging
]

[project.optional-dependencies]
test = [
    "pytest",
    "requests-mock"
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["myproject"]

[project.scripts]
myproject = "myproject.cli:cli"
myproject-admin = "myproject.admin_cli:cli"

[tool.setuptools.commands]
generate_completion = "setup_completion:main"
