[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanctrl"
version = "0.1.0"
description = "Python module containing the scanner control commands"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pyserial>=3.5"
]

[project.scripts]
scanctrl = "scanctrl.cli:cli"