[project]
name = "your_service_client"
version = "0.1.0"
description = "Client CLI for YourService, communicating with the server's API."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "requests>=2.28",
    "click>=8.1",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["your_service_client"]

[tool.setuptools.package-data]
your_service_client = ["*.json", "*.yaml"]

[project.scripts]
your-service-cli = "your_service_client.cli:cli"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
