[project]
name = "scanctrl_server"
version = "0.1.0"
description = "Server component for scanctrl, providing a Flask API."
authors = [
    { name = "Nicolas Sallin", email = "nicolas.sallin@unibe.ch" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "Flask>=2.2",
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/LHEP-neutrino/scanner"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["scanctrl_server"]

[project.scripts]
your-service-server = "scanctrl_server.server:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
